force-app/main/default/objects/Product_Feature__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of the Product Feature intended for non-technical readers</description>
    <inlineHelpText>Description of the Product Feature intended for non-technical readers</inlineHelpText>
    <label>Description</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>