force-app/main/default/objects/Product_Feature__c/fields/Feature_Owner__c.field-meta.xml
<CustomField>
    <fullName>Feature_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Person that owns the business requirements and management of this feature through the entire product management lifecycle. This person is typically a product manager, though occasionally SEs and Engineers play this role.</description>
    <inlineHelpText>Person that owns the business requirements and management of this feature through the entire product management lifecycle. This person is typically a product manager, though occasionally SEs and Engineers play this role.</inlineHelpText>
    <label>Feature Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Product_Features2</relationshipName>
    <type>Lookup</type>
</CustomField>