force-app/main/default/objects/Product_Feature__c/fields/PRD_Status__c.field-meta.xml
<CustomField>
    <fullName>PRD_Status__c</fullName>
    <description>Does this feature need a Product Requirements Document?</description>
    <inlineHelpText>Does this feature need a Product Requirements Document?</inlineHelpText>
    <label>PRD Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>Required - Incomplete</fullName>
                <default>true</default>
                <label>Required - Incomplete</label>
            </value>
            <value>
                <fullName>Required - Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>