force-app/main/default/objects/Product_Feature__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>Describes the priority of this feature. This field is primarily used for prioritizing unscheduled features.</description>
    <inlineHelpText>Describes the priority of this feature. This field is primarily used for prioritizing unscheduled features.</inlineHelpText>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0 - Critical</fullName>
            </value>
            <value>
                <fullName>1 - High</fullName>
            </value>
            <value>
                <fullName>2 - Medium</fullName>
                <default>true</default>
                <label>2 - Medium</label>
            </value>
            <value>
                <fullName>3 - Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>